Don't require a Python file to be opened to run the command

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "commands": [
       {
         "command": "wwbd.setUpEnvironment",
-        "title": "Set Up Environment",
-        "when": "editorLangId == python"
+        "title": "Set Up Environment"
       }
     ]
   },
