--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+    "[typescript][yaml]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "files.exclude": {
         "out": false // set this to true to hide the "out" folder with the compiled JS files
     },
