--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,5 +1,5 @@
 name: Tests
-on: [pull_request, push]
+on: [pull_request]
 
 jobs:
   python-tests:
@@ -13,6 +13,7 @@ jobs:
         with:
           python-version: "3.7" # The oldest version supported.
           cache: "pip"
+          cache-dependency-path: "**/requirements-dev.txt"
       - name: "Install dependencies"
         run: python -m pip install -r requirements-dev.txt
       - name: "Run tests"
