--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "glob": "^7.2.0",
     "mocha": "^9.2.2",
     "typescript": "^4.5.5",
+    "vsce": "^2.7.0",
     "@vscode/test-electron": "^2.1.3"
   }
 }
