--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,12 +7,14 @@ env:
 jobs:
   python-tests:
     name: Python Tests
-    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.10"]
+        operating-system: ["ubuntu-latest", "windows-latest"]
+
+    runs-on: ${{ matrix.operating-system }}
 
     steps:
       - name: "Checkout Repository"
@@ -28,12 +30,14 @@ jobs:
 
   typescript-tests:
     name: "TypeScript Tests"
-    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.10"]
+        operating-system: ["ubuntu-latest", "windows-latest"]
+
+    runs-on: ${{ matrix.operating-system }}
 
     steps:
       - name: "Checkout Repository"
